--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="./main.css">
     <meta name="theme-color" content="#ffffff">
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="./manifest.json">
   </head>
   <body>
     <div id="header">
       <div class="turns">
         <div class="spin-icon">
           <div class="coin-lift">
-            <img class="spin-img spin-img-dark" src="/assets/dark_rotate.svg">
-            <img class="spin-img" src="/assets/rotate.svg">
+            <img class="spin-img spin-img-dark" src="./assets/dark_rotate.svg">
+            <img class="spin-img" src="./assets/rotate.svg">
           </div>
         </div>
         <div class="turns-text">
@@ -28,7 +28,7 @@
         <div class="velocity-display">
           <div id="velocity">0</div>
           <div class="velocity-unit">/sec</div>
-          <img class="speed-icon" src="/assets/speed_icon.svg">
+          <img class="speed-icon" src="./assets/speed_icon.svg">
         </div>
       </div>
     </div>
@@ -39,7 +39,7 @@
         <div id="maxVelocity">0</div>
       </div>
     </div>
-    <script src="/index.js"></script>
+    <script src="./index.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
