--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="stylesheet" href="./main.css">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#fffff">
     <link rel="manifest" href="./manifest.json">
   </head>
   <body>
