--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
     <div id="footer">
       <div class="max-velocity">
-        <div class="max-velocity-unit">Top Speed: </div>
+        <div class="max-velocity-unit">Top Zpeed: </div>
         <div id="maxVelocity">0</div>
       </div>
     </div>
